--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ input, select, textarea {
 		background-attachment: fixed;
 		background-repeat: repeat, no-repeat, auto;
 		position: relative;
-		background-color: #150C07;
+		background-color: #2D2D2D;
 		line-height: 1.75em;
 		overflow-x: hidden;
 		overflow-y: auto;
