--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -580,7 +580,7 @@ input, select, textarea {
 					flex-shrink: 1;
 					width: calc(50vw - 15px) !important;
 					margin: 2.5px;
-					box-shadow: 0 0 0 5px #ffffff;
+					box-shadow: 0 0 0 5px #000;
 				}
 
 					#main .item.intro {
@@ -591,7 +591,7 @@ input, select, textarea {
 					}
 
 						#main .item.intro h1 {
-							font-size: 2em;
+							font-size: 4em;
 						}
 
 						#main .item.intro p {
